--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "author": "Xiaosong Gao",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/hecom-rn/general-tree.git/issues",
+        "url": "https://github.com/hecom-rn/general-tree/issues",
         "email": "gaoxiaosong06@gmail.com"
     },
-    "homepage": "https://github.com/hecom-rn/general-tree.git#readme"
+    "homepage": "https://github.com/hecom-rn/general-tree#readme"
 }
